@@ -132,6 +132,8 @@ class VAE(BaseThresholder):
                             np.sum(stats.norm.logpdf(vals[i:], loc=mu2, scale=sigma))]
 
         dims = round(np.log(np.argsort(profile_lik)[-1]))
+        valen = len(vals)
+        dims = np.nan_to_num(dims, neginf=valen, posinf=valen, nan=valen)
         return dims
 
     def _train(self):
