@@ -28,3 +28,4 @@ v<0.2.7>, <11/01/2022> -- Added sgd model to ocsvm
 v<0.2.7>, <11/06/2022> -- Exposed random_state variable for required thresholders
 v<0.2.7>, <11/07/2022> -- Updated trained meta-models (better thresholding accuracy)
 v<0.2.8>, <11/08/2022> -- 'native' parameter to 'auto' (code consistency)
+v<0.2.8>, <11/19/2022> -- Stability fixes for vae, ocsvm, fwfm
